adapted ListSetTest seemingly to change in api.
git-svn-id: file:///SVN_Archive/Software/trunk@12834 9b6744e0-6d27-0410-8403-e1b9a971d29b